--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,17 @@
 {
   "name": "Medical Record Audit System",
   "short_name": "MRAS",
-  "start_url": "/mra",
+  "start_url": "",
   "display": "standalone",
   "icons": [
     {
-      "src": "/mra//images/moph-sm-192x192.png",
+      "src": "/images/moph-sm-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/mra//images/moph-sm-192x192.png",
+      "src": "/images/moph-sm-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
