--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "pdfjs-dist": "^4.2.67",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-idle-timer": "^5.7.2",
